--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -18,9 +18,8 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/my-node-app:v1 .
+- name: Build Docker image
+  run: docker build -t ${{ secrets.DOCKER_USERNAME }}/my-node-app:v1 ./src
 
       - name: Push Docker image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/my-node-app:v1
