--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: CI/CD Pipeline
 
 on:
   push:
@@ -13,13 +13,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Log in to DockerHub
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-- name: Build Docker image
-  run: docker build -t ${{ secrets.DOCKER_USERNAME }}/my-node-app:v1 ./src
 
-      - name: Push Docker image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/my-node-app:v1
+      - name: Build and push Docker image
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/my-node-app:v1 .
+          docker push ${{ secrets.DOCKER_USERNAME }}/my-node-app:v1
