--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -22,7 +22,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/my-node-app:v1 .
+- name: Build and push Docker image
+  run: docker build -f Dockerfile -t ${{ secrets.DOCKER_USERNAME }}/my-node-app:v1 .
+
           docker push ${{ secrets.DOCKER_USERNAME }}/my-node-app:v1
