--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: Build and Push Docker Image
 
 on:
   push:
@@ -22,6 +22,8 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-- name: Build and push Docker image
-  run: docker build -f Dockerfile -t ${{ secrets.DOCKER_USERNAME }}/my-node-app:v1 .
+      - name: Build and push Docker image
+        run: docker build -f ./Dockerfile -t ${{ secrets.DOCKER_USERNAME }}/my-node-app:v1 .
 
+      - name: Push Docker image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/my-node-app:v1
